# cookbook

./: README.md  pyproject.toml
data/: 2e6c6eb8-834d-46ff-94cc-0703e7be5292.csv  8787939c-a268-4570-8f53-1ae50c85dc16.csv  IMMUNIZATION.txt  MANUAL_TEST.txt
src/cookbook/analysis/: general.py  indiana.py
src/cookbook/cli/text_classifier_api/: build_model.py  predict.py
src/cookbook/cli/web_module_api/: get_data.py
src/cookbook/collect/: web.py
src/cookbook/fhir/: api.py
src/cookbook/ml/: core.py  text_classifier.py
src/cookbook/utils/: database.py  file.py
tests/: test_collect.py  test_ml.py  test_utils.py
